infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels:
        app: orders-mongo
    spec:
      #you can have multiple docker in one pod
      containers:
        - name: orders-mongo
          #name of the image comes from dockerhub
          #in this case we are using an available image
          image: mongo
---
#separator for another config file
#this is for the service
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-srv
spec:
  selector:
    #this name has to match label of the deployment
    app: orders-mongo
    #default is clusterIP, so type is not necessary
  type: ClusterIP
  ports:
    #just for logging on the terminal
    - name: db
      #default mongoDB port
      protocol: TCP
      port: 27017
      targetPort: 27017
